# smos-thesis

./: .crates.toml  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  loader.sh  meson-toolchain.txt  meson.build  run-qemu
.github/workflows/: rust.yml
crates/bitfield/src/: lib.rs
crates/blk_driver/: Cargo.toml  build.rs
crates/blk_driver/src/: main.rs
crates/blk_virt/: Cargo.toml  build.rs
crates/boot_file_server/: Cargo.toml
crates/boot_file_server/src/: main.rs
crates/echo_server/: Cargo.toml  build.rs
crates/echo_server/src/: main.rs
crates/eth_copier/: Cargo.toml  build.rs
crates/eth_copier/src/: main.rs
crates/eth_driver/: Cargo.toml  build.rs
crates/eth_driver/src/: main.rs
crates/eth_virt_rx/: Cargo.toml  build.rs
crates/eth_virt_rx/src/: main.rs
crates/eth_virt_tx/: Cargo.toml  build.rs
crates/eth_virt_tx/src/: main.rs
crates/fat/: Cargo.toml  build.rs
crates/fat/src/: main.rs
crates/init/: Cargo.toml
crates/init/src/: main.rs
crates/root_server/: Cargo.toml
crates/root_server/src/: .main.rs.swp  arith.rs  bitfield.rs  boot_fs.rs  bootstrap.rs  clock.rs  connection.rs  cspace.rs  debug.rs  dma.rs  elf_load.rs  fault.rs  frame_table.rs  handle.rs  handle_capability.rs  heap.rs  irq.rs  limits.rs  main.rs  mapping.rs  object.rs  page.rs  printing.rs  proc.rs  stack.rs  syscall.rs  tests.rs  uart.rs  ut.rs  util.rs  view.rs  vm.rs  vmem_layout.rs  window.rs
crates/root_server/src/clock/: clock_arm.rs  clock_meson.rs
crates/root_server/src/uart/: uart_meson.rs  uart_pl011.rs
crates/serial_virt_rx/: Cargo.toml  build.rs
crates/serial_virt_rx/src/: main.rs
crates/serial_virt_tx/: Cargo.toml  build.rs
crates/serial_virt_tx/src/: main.rs
crates/smos-client/: Cargo.toml
crates/smos-client/src/: connection.rs  error.rs  lib.rs  syscall.rs
crates/smos-common/: Cargo.toml
crates/smos-common/src/: args.rs  channel.rs  client_connection.rs  connection.rs  error.rs  init.rs  invocations.rs  lib.rs  local_handle.rs  obj_attributes.rs  returns.rs  sddf.rs  server_connection.rs  string.rs  syscall.rs  util.rs
crates/smos-cspace/: Cargo.toml
crates/smos-cspace/src/: lib.rs
crates/smos-loader/: Cargo.toml  build.rs  custom.ld
crates/smos-loader/src/: main.rs
crates/smos-runtime/: Cargo.toml
crates/smos-runtime/macros/: Cargo.toml
crates/smos-runtime/macros/src/: lib.rs
crates/smos-runtime/src/: args.rs  entry.rs  env.rs  lib.rs
crates/smos-sddf/: Cargo.toml
crates/smos-sddf/src/: blk_config.rs  config.rs  device_config.rs  device_region.rs  dma_region.rs  driver_setup.rs  fs_config.rs  irq_channel.rs  lib.rs  net_config.rs  notification_channel.rs  queue.rs  sddf_bindings.rs  sddf_channel.rs  serial_config.rs  timer_config.rs
crates/smos-server/: Cargo.toml
crates/smos-server/src/: error.rs  event.rs  handle.rs  handle_arg.rs  handle_capability.rs  lib.rs  ntfn_buffer.rs  reply.rs  syscalls.rs
crates/test_app/: Cargo.toml
crates/test_app/src/: main.rs
crates/timer/: Cargo.toml  build.rs
crates/timer/src/: main.rs
crates/virtio_serial_driver/: Cargo.toml  build.rs
crates/virtio_serial_driver/src/: main.rs
docker/: Makefile  kernel-settings.cmake
