#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[workspace]

resolver = "2"

members = [
    "crates/root_server", "crates/smos-client", "crates/smos-runtime", "crates/smos-server", "crates/smos-common",
    "crates/test_app"
, "crates/smos-cspace", "crates/bitfield"]
