#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[workspace]

resolver = "2"

members = [
    "crates/root_server", "crates/smos-runtime", "crates/smos-server", "crates/smos-common",
    "crates/init"
, "crates/smos-cspace", "crates/bitfield", "crates/smos-loader", "crates/boot_file_server", "crates/eth_virt_tx", "crates/eth_virt_rx", "crates/eth_driver", "crates/smos-sddf", "crates/echo_server", "crates/eth_copier", "crates/timer", "crates/virtio_serial_driver", "crates/serial_virt_rx", "crates/serial_virt_tx"
, "crates/blk_driver"]
