#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "root_server"
version = "0.1.0"
authors = ["Alwin Joshy <alwin.joshy@unsw.edu.au>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4 = { git = "https://github.com/alwin-joshy/rust-sel4", rev="828aeab79877a4dce371002a393401e80e20d8e0" }
sel4-sys = { git = "https://github.com/alwin-joshy/rust-sel4", rev="828aeab79877a4dce371002a393401e80e20d8e0"  }
sel4-config = {  git = "https://github.com/alwin-joshy/rust-sel4", rev="828aeab79877a4dce371002a393401e80e20d8e0" }
sel4-root-task = {  git = "https://github.com/alwin-joshy/rust-sel4", rev="828aeab79877a4dce371002a393401e80e20d8e0" }
# sel4-root-task = { git = "https://github.com/seL4/rust-sel4" }
linked_list_allocator = "0.10.5"
elf = { git = "https://github.com/alwin-joshy/rust-elf.git", rev="4b93dc6466914c3fd12a15c925f8136e7427f289", features=[]}