#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "root_server"
version = "0.1.0"
authors = ["Alwin Joshy <alwin.joshy@unsw.edu.au>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4" }
sel4-sys = { git = "https://github.com/seL4/rust-sel4" }
sel4-config = { git = "https://github.com/seL4/rust-sel4" }
sel4-root-task = { git = "https://github.com/seL4/rust-sel4" }
smos-server = { path = "../smos-server" }
bitfield = { path = "../bitfield" }
linked_list_allocator = "0.10.5"
elf = {version = "0.7.4", default-features = false, features=[]}
smos-common = { path = "../smos-common" }
byteorder = { version = "1.5.0", default-features = false }
offset-allocator = { git = "https://github.com/alwin-joshy/offset-allocator", rev = "7594277b72294996ae66fb34bc24b6a85e3e58e1"}
