[package]
name = "smos-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", features = ["state", "thread-local-state"]}
sel4-sys = { git = "https://github.com/seL4/rust-sel4" }
smos-common  = { path = "../smos-common" }
smos-cspace = { path = "../smos-cspace" }