[package]
name = "smos-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", features = ["state", "thread-local-state"]}
sel4-sys = { git = "https://github.com/seL4/rust-sel4" }
sel4-config = { git = "https://github.com/seL4/rust-sel4" }
sel4-panicking = { git = "https://github.com/seL4/rust-sel4" }
sel4-runtime-common = { git = "https://github.com/seL4/rust-sel4", features = ["tls", "unwinding"]}
sel4-panicking-env = {git = "https://github.com/seL4/rust-sel4"}
smos-macros = { path = "macros" }
smos-cspace = {path = "../smos-cspace"}
smos-common = {path = "../smos-common"}
linked_list_allocator = "0.10.5"
byteorder = { version = "1.5.0", default-features = false }