[package]
name = "smos-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", features = ["state", "thread-local-state"]}
sel4-sys = { git = "https://github.com/seL4/rust-sel4" }
smos-common  = { path = "../smos-common" }
downcast-rs = { version = "1.2.0", default-features = false }
sel4-bitfield-ops = { git = "https://github.com/seL4/rust-sel4"}
sel4-shared-ring-buffer = { git = "https://github.com/alwin-joshy/rust-sel4", branch = "ring_buffer_extended" }
num_enum = { version = "0.7.2", default-features = false, features = [] }
zerocopy = { version = "0.7.32", features = ["derive"] }
sel4-externally-shared = { git = "https://github.com/alwin-joshy/rust-sel4", branch = "ring_buffer_extended" }
